src/app.css
@import '@fontsource-variable/source-serif-4';
@import '@fontsource-variable/source-serif-4/opsz.css';
@import '@fontsource/source-serif-4/400-italic.css';

:root {
	--font-body: 'Source Serif 4 Variable', serif;
	--font-size-body: 18px;

	--grey-10: #ffffff;
	--grey-9: #f1f1f1;
	--grey-5: #7d7d7e;
	--grey-3: #3b3b3d;
	--grey-1: #020203;

	--beige-9: #ece0db;
	--beige-7: #a79c97;
	--beige-5: #5f5854;
	--beige-3: #312b29;

	--color-bg: var(--grey-9);
	--color-button: var(--beige-9);
	--color-button-2: var(--beige-5);
	--color-text: var(--grey-1);
	--color-text-2: var(--grey-5);

	--easing-1: cubic-bezier(0.38, 0, 0.16, 1);
	--transition-1: 0.15s var(--easing-1);
	--transition-2: 0.3s var(--easing-1);

	font-family: var(--font-body);
	font-size: var(--font-size-body);
	color: var(--color-text);
}

body {
	min-height: 100vh;
	margin: 0;
	background-color: var(--color-bg);

	background-size: 100vw auto;
}

h1 {
	font-size: 54px;
	line-height: 100%;
	letter-spacing: -1.25%;
	font-variation-settings:
		'wght' 385,
		'opsz' 15;
	margin: 0;
}

h2 {
	font-size: 38px;
	line-height: 100%;
	letter-spacing: -1.25%;
	font-variation-settings:
		'wght' 385,
		'opsz' 15;
	margin: 0;
}

h3 {
	font-size: 20px;
	margin: 0;
}

p {
	font-size: var(--font-size-body);
	letter-spacing: -1%;
	line-height: 138%;
	margin: 0;
}

span {
	color: var(--color-text);
	font-size: var(--font-size-body);
	font-family: var(--font-body);
}

a {
	text-decoration: none;
	user-select: none;
}

.app {
	display: flex;
	min-height: 100vh;
}

main {
	display: flex;
	flex-direction: column;
	width: 100%;
	height: fit-content;
}

button {
	border: none;
	cursor: pointer;
	user-select: none;
}

nav {
	box-sizing: border-box;
	position: fixed;
	overflow: hidden;
	width: 72px;
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	background-color: var(--grey-10);
	padding: 16px !important;
	box-shadow:
		rgba(0, 0, 0, 0.09) 0px 0.75px 0.75px -0.75px,
		rgba(0, 0, 0, 0.09) 0px 2.75px 2.75px -1.75px,
		rgba(0, 0, 0, 0.09) 0px 12px 12px -2.5px;
	z-index: 10;
	transition: var(--transition-1);
}

nav:hover {
	width: 182px;
}

section {
	display: flex;
	gap: 10px;
	height: 100%;
	justify-content: center;
	align-items: center;
}

iframe {
	z-index: 1;
	flex-grow: 1;
	border: none;
	max-width: 960px;
	max-height: 90%;
	aspect-ratio: 1.33333;
	border-radius: 6px;
	box-shadow:
		0px 0px 1px rgba(0, 0, 0, 0.05),
		0px 8px 16px rgba(0, 0, 0, 0.1);
}

.nav-links {
	padding: 0;
	margin: -12px 0 0 -12px;
	height: 48px;
	display: flex;
}

/* ButtonNav */
.button-nav {
	height: 48px;
	width: 182px;
	display: flex;
	align-items: center;
	gap: 8px;
	padding-left: 8px;
	background: none;
}

.button-nav svg {
	width: 20px;
	height: 20px;
	fill: var(--color-text-2);
	transition: var(--transition-1);
}

.button-nav:hover svg {
	fill: var(--color-text);
}

.button-nav span {
	color: var(--color-text-2);
	opacity: 0;
	transition: var(--transition-1);
}

nav:hover .button-nav span {
	opacity: 1;
}

.button-nav:hover span {
	color: var(--color-text);
}

/* ButtonCta */
.button-cta {
	width: 40px;
	height: 40px;
	display: flex;
	align-items: center;
	gap: 8px;
	padding-left: 10px;
	border-radius: 20px;
	background: linear-gradient(to top, var(--grey-1), var(--grey-3));
	transition: var(--transition-1);
}

.button-cta svg {
	min-width: 20px;
	max-width: 20px;
	height: 20px;
	fill: var(--grey-10);
	transition: var(--transition-1);
}

.button-cta span {
	color: var(--grey-10);
	opacity: 0;
	transition: var(--transition-1);
}

.button-cta:hover {
	opacity: 0.9;
	border-radius: 4px;
}

.button-cta:active {
	opacity: 0.8;
}

nav:hover .button-cta span {
	opacity: 1;
}

nav:hover .button-cta {
	width: 150px;
	padding-left: 16px;
}

.bottom {
	position: absolute;
	bottom: 14px;
}

/* button-primary */
.button-primary {
	width: fit-content;
	height: 40px;
	display: flex;
	padding: 20px;
	align-items: center;
	justify-content: center;
	border-radius: 20px;
	background: linear-gradient(to top, var(--grey-1), var(--grey-3));
	color: var(--grey-10);
	font-family: var(--font-body);
	font-size: var(--font-size-body);
	transition: var(--transition-1);
}

.button-primary:hover {
	opacity: 0.9;
	border-radius: 4px;
}

.button-primary:active {
	opacity: 0.8;
}

/* button-secondary */
.button-secondary {
	width: fit-content;
	height: 40px;
	display: flex;
	padding: 20px;
	align-items: center;
	justify-content: center;
	background: none;
	border: 1px solid var(--grey-1);
	border-radius: 20px;
	color: var(--grey-1);
	font-family: var(--font-body);
	font-size: var(--font-size-body);
	transition: var(--transition-1);
}

.button-secondary:hover {
	opacity: 0.9;
	border-radius: 4px;
}

.button-secondary:active {
	opacity: 0.8;
}

/* Hero */
.hero {
	height: 75vh;
	display: flex;
	padding-left: 144px;
}

.hero div {
	position: relative;
	flex-grow: 1;
	height: 220px;
}

.hero div img {
	position: absolute;
	width: 32px;
	height: 32px;
	border-radius: 50%;
	border: 1px solid var(--grey-10);
	box-shadow:
		0 0 2px #00000026,
		0 8px 16px #0000001a;
	top: 0;
	left: 76px;
}

.hero div img:nth-of-type(2) {
	left: 57px;
}

.hero div img:nth-of-type(3) {
	left: 38px;
}

.hero div img:nth-of-type(4) {
	left: 19px;
}

.hero div img:nth-of-type(5) {
	left: 0px;
}

.hero div span {
	position: absolute;
	left: 118px;
	top: 4px;
	font-style: italic;
	letter-spacing: -1%;
	font-family: 'Source Serif 4', serif;
	font-size: var(--font-size-body);
}

.hero div h1 {
	position: absolute;
	width: fit-content;
	top: 52px;
	left: 0px;
}

.hero div h1:nth-of-type(2) {
	left: 215px;
}

.hero div h1:nth-of-type(3) {
	top: 105px;
}

.hero div svg {
	position: absolute;
	width: 50px;
	height: 50px;
	top: 56px;
	left: 165px;
}

.hero div button {
	position: absolute;
	bottom: 0px;
}

.hero div button:nth-of-type(2) {
	left: 182px;
	bottom: 0px;
}

/* Demo */
.demo {
	box-sizing: border-box;
	height: 100vh;
	display: flex;
	padding: 0px 72px 0px 144px;
}

/* Components */
.components {
	box-sizing: border-box;
	height: 100vh;
	display: flex;
	gap: 0px;
	padding: 0px 0px 0px 72px;
}

.components span {
	box-sizing: border-box;
	height: 100%;
	width: 50%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: end;
	padding: 0 64px 0 208px;
	gap: 20px;
	background-color: var(--grey-10);
}

.force-graph {
	position: relative;
	box-sizing: border-box;
	height: 100%;
	width: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
}

.node {
	position: absolute;
	background-color: var(--grey-1);
	border: 1px solid var(--grey-1);
	border-radius: 50%;
	transition: background-color 0.3s var(--easing-1);
	cursor: grab;
	transform-origin: center center;
}

.node:hover {
	background-color: var(--beige-5);
}

.node:active {
	cursor: grabbing;
}

.components h2,
.components p {
	width: 100%;
	min-width: 320px;
	max-width: 348px;
}

.contact-grid {
	position: relative;
	width: 200px;
	height: 200px;
	border: 1px solid var(--beige-3);
}

.contact-grid span {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	opacity: 0;
	transition: opacity var(--transition-1);
	text-wrap: nowrap;
	user-select: none;
}

.contact-grid span.visible {
	opacity: 1;
}

.contact-grid button {
	position: absolute;
	width: 48px;
	height: 48px;
	display: flex;
	background-color: var(--color-bg);
	justify-content: center;
	align-items: center;
	transition: var(--transition-2);
	color: var(--beige-5);
	transform: translate(-50%, -50%);
}

.contact-grid button:nth-child(5) {
	left: 0;
	top: 50%;
}

.contact-grid button:nth-child(6) {
	left: 0;
	top: 50%;
}

.contact-grid button:nth-child(7) {
	left: 50%;
	top: 0;
}

.contact-grid button:nth-child(8) {
	left: 100%;
	top: 50%;
}

.contact-grid button:nth-child(9) {
	left: 50%;
	top: 100%;
}

.contact-grid button:hover {
	color: var(--beige-9);
	width: 72px;
	height: 72px;
}

.contact-grid button svg {
	fill: currentColor;
}

@media (min-width: 720px) and (max-width: 1055px) {
	nav {
		width: 40%;
		padding: 0 max(calc(20% - 146px), 24px);
	}

	.gradient-line {
		width: max(40%, 340px);
	}

	.button-graphic {
		width: 144px;
		height: 144px;
		padding: 48px;
	}

	.button-graphic:hover {
		width: 168px;
		height: 168px;
	}

	.contact-grid {
		width: 168px;
		height: 168px;
	}
}

@media (max-width: 719px) {
	.app {
		flex-direction: column-reverse;
		min-height: auto;
	}

	main {
		height: 50dvh;
	}

	nav {
		box-sizing: border-box;
		height: 50dvh;
		padding: 0 max(calc(50% - 134px), 48px) 10vh max(calc(50% - 134px), 48px);
	}

	section {
		padding: 10vh 0 0 max(calc(50% - 134px), 48px);
		justify-content: start;
	}

	.button-graphic {
		width: 144px;
		height: 144px;
		padding: 48px;
	}

	.button-graphic:hover {
		width: 168px;
		height: 168px;
	}

	.contact-grid {
		width: 168px;
		height: 168px;
	}

	.gradient-line {
		width: 24px;
	}
}

@media (prefers-reduced-motion: no-preference) {
}

